[package]
name = "caipora"
version = "0.1.0"
authors = ["Flavio Rasseli <frasseli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "caipora"

[dependencies]
actix-web = "3.3.2"
serde = "1.0.130"
serde_json = "1.0.59"
config = "=0.11.0"
hex = "0.4.3"